test/files/invalid/unknown_constants.fbs
table Foo {
  x: float32 = NaN;
  y: float32 = hello;
}