test/files/invalid/unknown_constants.stderr
error: Unknown constant "hello"
  ┌─ test/files/invalid/unknown_constants.fbs:3:16
  │
3 │   y: float32 = hello;
  │                ^^^^^

Error: Bailing because of errors
